# lb-ri-utils

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  tbump.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml  update-cabs.yml
scripts/: generate_cabs.py
src/lb_ri_utils/: __init__.py
src/lb_ri_utils/cabs/: onboard.yml
src/lb_ri_utils/cli/: __init__.py  onboard.py
src/lb_ri_utils/core/: __init__.py  onboard.py
tests/: test_install.py
